--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="primary-style">
-    <header>
+    <header class="header-shadow">
       <div class="container">
         <nav class="navigation-style">
           <a href="./index.html">
