--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="primary-style">
-    <header>
+    <header class="header-shadow">
       <div class="container">
         <nav class="navigation-style">
           <a href="./index.html">
@@ -46,7 +46,6 @@
           </li>
         </ul>
       </div>
-      <div class="header-shadow"></div>
     </header>
     <main>
       <section>
