--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
       </section>
     </main>
     <footer class="end-page">
+      <div class="container">
       <a href="./index.html">
         <span class="logo-web">Web</span><span class="logo-studio-end-page">Studio</span></a
       >
@@ -184,6 +185,7 @@
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
