--- a/portfolio.html
+++ b/portfolio.html
@@ -46,32 +46,29 @@
           </li>
         </ul>
       </div>
+      <div class="header-shadow"></div>
     </header>
     <main>
       <section>
         <div class="container">
-          <div class="buttons">
-            <h1 class="visually-hidden">Our portfolio</h1>
-            <ul class="list button-flex">
-              <li>
-                <button class="filter" type="button">All</button>
-              </li>
-              <li>
-                <button class="filter" type="button">Web Site</button>
-              </li>
-              <li>
-                <button class="filter" type="button">App</button>
-              </li>
-              <li>
-                <button class="filter" type="button">Design</button>
-              </li>
-              <li>
-                <button class="filter" type="button">Marketing</button>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="container">
+          <h1 class="visually-hidden">Our portfolio</h1>
+          <ul class="list button-flex">
+            <li>
+              <button class="filter" type="button">All</button>
+            </li>
+            <li>
+              <button class="filter" type="button">Web Site</button>
+            </li>
+            <li>
+              <button class="filter" type="button">App</button>
+            </li>
+            <li>
+              <button class="filter" type="button">Design</button>
+            </li>
+            <li>
+              <button class="filter" type="button">Marketing</button>
+            </li>
+          </ul>
           <ul class="list portfolio-flex">
             <li class="card">
               <img
@@ -81,8 +78,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Banking App Interface Concept</h2>
-              <p class="portfolio-comment">App</p>
+                <h2 class="portfolio-name">Banking App Interface Concept</h2>
+                <p class="portfolio-comment">App</p>
               </div>
             </li>
             <li class="card">
@@ -93,8 +90,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Cashless Payment</h2>
-              <p class="portfolio-comment">Marketing</p>
+                <h2 class="portfolio-name">Cashless Payment</h2>
+                <p class="portfolio-comment">Marketing</p>
               </div>
             </li>
             <li class="card">
@@ -105,8 +102,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Meditaion App</h2>
-              <p class="portfolio-comment">App</p>
+                <h2 class="portfolio-name">Meditaion App</h2>
+                <p class="portfolio-comment">App</p>
               </div>
             </li>
             <li class="card">
@@ -117,8 +114,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Taxi Service</h2>
-              <p class="portfolio-comment">Marketing</p>
+                <h2 class="portfolio-name">Taxi Service</h2>
+                <p class="portfolio-comment">Marketing</p>
               </div>
             </li>
             <li class="card">
@@ -129,8 +126,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Screen Illustrations</h2>
-              <p class="portfolio-comment">Design</p>
+                <h2 class="portfolio-name">Screen Illustrations</h2>
+                <p class="portfolio-comment">Design</p>
               </div>
             </li>
             <li class="card">
@@ -141,8 +138,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Online Courses</h2>
-              <p class="portfolio-comment">Marketing</p>
+                <h2 class="portfolio-name">Online Courses</h2>
+                <p class="portfolio-comment">Marketing</p>
               </div>
             </li>
             <li class="card">
@@ -153,8 +150,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2>Instagram Stories Concept</h2>
-              <p class="portfolio-comment">Design</p>
+                <h2>Instagram Stories Concept</h2>
+                <p class="portfolio-comment">Design</p>
               </div>
             </li>
             <li class="card">
@@ -165,8 +162,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Organic Food</h2>
-              <p class="portfolio-comment">Web Site</p>
+                <h2 class="portfolio-name">Organic Food</h2>
+                <p class="portfolio-comment">Web Site</p>
               </div>
             </li>
             <li class="card">
@@ -177,8 +174,8 @@
                 height="300"
               />
               <div class="card-text">
-              <h2 class="portfolio-name">Fresh Coffee</h2>
-              <p class="portfolio-comment">Web Site</p>
+                <h2 class="portfolio-name">Fresh Coffee</h2>
+                <p class="portfolio-comment">Web Site</p>
               </div>
             </li>
           </ul>
@@ -186,13 +183,15 @@
       </section>
     </main>
     <footer class="end-page">
-      <a href="./index.html">
-        <span class="logo-web">Web</span><span class="logo-studio-end-page">Studio</span></a
-      >
-      <p class="end-page-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html">
+          <span class="logo-web">Web</span><span class="logo-studio-end-page">Studio</span></a
+        >
+        <p class="end-page-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
