Корегує розташування advantages-item

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           </li>
         </ul>
       </div>
-      <div class="header-shadow"></div>
     </header>
     <main>
       <section class="hero">
@@ -58,15 +57,15 @@
           <h2 class="visually-hidden">Our advantages:</h2>
           <ul class="list advantages-item">
             <li class="item">
-              <h3 class="advantages-headline item">Strategy</h3>
-              <p class="advantages-text item">
+              <h3 class="advantages-headline">Strategy</h3>
+              <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with the perfect and
                 creative solution.
               </p>
             </li>
             <li class="item">
-              <h3 class="advantages-headline item">Punctuality</h3>
-              <p class="advantages-text item">
+              <h3 class="advantages-headline">Punctuality</h3>
+              <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price within the shortest
                 possible time.
               </p>
