--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       <div class="header-shadow"></div>
     </header>
     <main>
-      <section>
+      <section class="portfolio-style">
         <div class="container">
           <h1 class="visually-hidden">Our portfolio</h1>
           <ul class="list button-flex">
